# ChangeLog for app-misc/note
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/note/ChangeLog,v 1.24 2008/07/31 16:45:08 ulm Exp $

*note-1.3.6 (14 Aug 2011)

  14 Aug 2011; Kent Fredric <kentfredric@gmail.com> +note-1.3.6.ebuild:
  Bumped to 1.3.6 now available from CPAN

  31 Jul 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add USE flag description to metadata wrt GLEP 56.

  21 Apr 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Fix up metadata.xml. If there's no maintainer for the package, the metadata
  also needs to contain m-needed@g.o.

  29 Jan 2008; Christian Faulhammer <opfer@gentoo.org> -note-1.2.5.ebuild,
  -note-1.2.5-r1.ebuild, -note-1.3.1.ebuild:
  clean up

  24 Jan 2008; nixnut <nixnut@gentoo.org> ChangeLog:
  Stable on ppc wrt bug 207123

  23 Jan 2008; Christian Faulhammer <opfer@gentoo.org> note-1.3.3.ebuild:
  stable x86/amd64, bug 207123

  09 Nov 2007; nixnut <nixnut@gentoo.org> note-1.3.3.ebuild:
  Added ~ppc wrt bug 195919

  18 Oct 2007; Christoph Mende <angelos@gentoo.org> note-1.3.3.ebuild:
  Added ~amd64 wrt bug #195919

  15 Oct 2007; Christian Faulhammer <opfer@gentoo.org> note-1.3.3.ebuild:
  fix quoting for variable, thanks Donnie

*note-1.3.3 (15 Oct 2007)

  15 Oct 2007; Christian Faulhammer <opfer@gentoo.org> +note-1.3.3.ebuild:
  version bump (bug 190724)

  23 Nov 2006; Francesco Riosa <vivo@gentoo.org> note-1.2.5.ebuild,
  note-1.2.5-r1.ebuild, note-1.3.1.ebuild:
  dev-db/mysql => virtual/mysql

  15 Jul 2006; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove rphillips from metadata.xml as he's retired.

  11 Feb 2006; Michael Cummings <mcummings@gentoo.org> note-1.3.1.ebuild:
  Virtuals for some perl-core deps

  23 Jan 2006; Michael Cummings <mcummings@gentoo.org> Manifest:
  Digest corruption?

  28 Nov 2005; <mcumming@gentoo.org> note-1.2.5-r1.ebuild, note-1.2.5.ebuild,
  note-1.3.1.ebuild: