@@ -1,6 +1,6 @@
 DIST note-1.3.3.tar.gz 42691 RMD160 c1af2b1e143e970d7c2f2c1dada411c57b8fa01e SHA1 c57ea78ef9d5fa9bf56e04820090686590ead80f SHA256 5287906338554a1ea06105048b5b6c5457076e44475a58e43433be775c108365
 DIST note-1.3.6.tar.gz 45362 RMD160 481fb6958449ecead69962253e97190e41cfb79b SHA1 6d39b3db0db397131b0a442a9a56fd07dbe730ae SHA256 cf941ce6c4fd43a10d5b1e6226e91dad499e8d5aee0ea97eeda1c43aa419d5a7
 EBUILD note-1.3.3.ebuild 1420 RMD160 f2a7feb635209452b308f69183edc81ade915b20 SHA1 3721032ead9c45cc13221f2c369a61dcb5e2d739 SHA256 ace6307e957cb139613ad7771e5c59a67a04c4c22f46de83b7c89eed84622e6a
-EBUILD note-1.3.6.ebuild 2208 RMD160 73345d559c95fa5afcc9a7b344457d7396a4f6bd SHA1 434a612ad9cc42c420839e5e6845e8073b476d08 SHA256 4584519a1f3ab5884dbd71ed585543162f1a17dca2f11965eb668a63553e56e4
-MISC ChangeLog 2839 RMD160 5ad74869594b88a1add14c2d3feaabf22b3697e5 SHA1 e4ce5116e2216de1fa1f988750e3ecf2643edfcb SHA256 280dca80e786855eaee96d30f3b8e460df052f6b32ae66e8ca4f3d37a5ebbbc4
+EBUILD note-1.3.6.ebuild 1876 RMD160 7323bec3a5dc8991ccf2623619fabda39ad6fd8b SHA1 3104f0fecfa792239188148ce37fdff791a17d90 SHA256 79e58ed79f8662383630a5a63deb9f0074b7206768b0456a1d9687152be05dbd
+MISC ChangeLog 3051 RMD160 62fd0c667b8018919e9fd28a57a4f363eb309698 SHA1 0e4b241b219b2639b17233805418f1b95b80911f SHA256 7044af801989eafcf8abb18e7e2ab2e08d9815b476b6a25ea8b42e8545c16a4c
 MISC metadata.xml 404 RMD160 ad0b5eae91e67e21eb16594ad60e1a105831c921 SHA1 d3984caaad4c24523f7f5b367cf81846616a8e07 SHA256 15fcfc3a591f79a0dd0257edc0aa424046db361246b78b93d701efb50ab54f8a
