@@ -9,7 +9,6 @@ inherit perl-app
 
 DESCRIPTION="A note taking perl program"
 HOMEPAGE="http://www.daemon.de/NOTE"
-#SRC_URI="http://www.daemon.de/files/mirror/ftp.daemon.de/scip/Apps/note/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
@@ -40,8 +39,8 @@ OPTIONAL="
 	)
 	readline? (
 		dev-perl/Term-ReadLine-Gnu
-	)
-"
+	)"
+
 RDEPEND="
 	virtual/perl-IO				$(comment prereq IO::File)
 								$(comment prereq FileHandle.pm)
@@ -50,38 +49,26 @@ RDEPEND="
 	virtual/perl-Getopt-Long	$(comment prereq Getopt::Long)
 								$(comment prereq Fcntl)
 	virtual/perl-IO				$(comment prereq IO::Seekable)
-	${OPTIONAL}
-"
+	${OPTIONAL}"
+
 DEPEND="${RDEPEND}"
 
-RESTRICT="test"
-SRC_TEST="do"
+SRC_TEST="skip" # broken tests.
 
 src_install() {
 	perl-module_src_install || die "perl-module_src_install failed"
 
-	# Adding some basic utitily for testing note
 	dodir /usr/share/${PN}
 	cp "${S}/bin/stresstest.sh" "${D}/usr/share/${PN}"
 
 	# Adding some help for mysql backend driver
-	if use mysql; then
-		dodir /usr/share/${PN}/mysql
-		cp -r "${S}/mysql" "${D}/usr/share/${PN}"
-	fi
+	dodir /usr/share/${PN}/mysql
+	cp -r "${S}/mysql" "${D}/usr/share/${PN}"
+
 
 	# Adding a sample configuration file
 	dodir /etc
 	cp "${S}/config/noterc" "${D}/etc"
-
-	# Supressing file not needed
-	for v in mysql text dbm general; do
-		if ! use ${v}; then
-			for u in `find "${D}" -type f -name *${v}.*pm`; do
-				rm "${u}"
-			done
-		fi
-	done
 
 	dodoc README Changelog UPGRADE VERSION
 }
